<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Dikan</string>
    <string name="title_activity_search_view" translatable="false">ScrollingActivity</string>
    <string name="large_text" translatable="false">
        "Material is the metaphor.\r\n\r\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\r\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\r\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\r\n\r\n"

        "Bold, graphic, intentional.\r\n\r\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\r\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\r\n\r\n"

        "Motion provides meaning.\r\n\r\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\r\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\r\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\r\n\r\n"

        "3D world.\r\n\r\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\r\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\r\n\r\n"

        "Light and shadow.\r\n\r\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\r\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\r\n\r\n"

        "Resting elevation.\r\n\r\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\r\n\r\n"

        "Component elevations.\r\n\r\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\r\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\r\n\r\n"

        "Responsive elevation and dynamic elevation offsets.\r\n\r\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\r\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\r\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\r\n\r\n"

        "Avoiding elevation interference.\r\n\r\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\r\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\r\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\r\n\r\n"
    </string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password" translatable="false">Password</string>
    <string name="action_sign_in" translatable="false">Sign in or register</string>
    <string name="action_sign_in_short" translatable="false">Sign in</string>
    <string name="welcome" translatable="false">"Welcome !"</string>
    <string name="invalid_username" translatable="false">Not a valid username</string>
    <string name="invalid_password" translatable="false">Password must be >5 characters</string>
    <string name="login_failed" translatable="false">"Login failed"</string>
    <string name="create_new_account">CREATE NEW ACCOUNT</string>
    <string name="UserName">Name</string>
    <string name="email">Email</string>
    <string name="phone_num">PhoneNumber</string>
    <string name="password">PassWord</string>
    <string name="confirm_password">ConFirm Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="lowest_price">LOWEST PRICE</string>
    <string name="highest_price">HIGHEST PRICE</string>
    <string name="welcome_to_dikan">WELCOME TO DIKAN</string>
    <string  name="forget_password">FORGET PASSWORD?</string>
    <string name="login">LOGIN</string>
    <string name="category">category</string>
    <string name="name">name:</string>
    <string name="price">price:</string>
    <string name="description">description:</string>
    <string name="add_advertise">ADD ADVERTISE</string>
    <string name="update_adv">UPDATE</string>
    <string name="delete_adv">DELETE</string>
    <string name="add_card">ADD CARD</string>
    <string name="seller_name">Seller Name:</string>
    <string name="edit_profile">EDIT YOUR PROFILE</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="confirm">CONFIRM</string>
    <string name="login_counter">Login Counter:</string>
    <string name="my_ads">MY ADVERTISEMENTS</string>
    <string name="all_products">ALL PRODUCTS</string>
    <string name="sum_prices">SUM OF PRICES</string>
    <string name="num_products">NUMBER OF PRODUCTS</string>
    <string name="num_sellers">NUMBER OF SELLERS</string>
    <string name="best_seller">BEST SELLER</string>
    <string name="product_list">PRODUCT LIST</string>
    <string name="seller_list">SELLER LIST</string>
    <string name="mandatory">Mandatory*</string>

</resources>