<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search_toolbar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".ProductPage">


    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="610dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/productimage"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:scaleType="centerCrop" />


            <TextView
                android:id="@+id/addProductCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext"
                android:padding="4dp"
                android:hint="@string/category"
                android:textColorHint="@color/grayDark"/>

            <TextView
                android:id="@+id/productname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/white"
                android:text="@string/name" />

            <TextView
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@color/white"
                android:text="@string/price" />


            <View

                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="5dp"
                android:background="@color/gray" />

            <TextView
                android:id="@+id/descriptiontitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:background="@color/white"
                android:text="@string/description"
                android:textSize="15dp" />


            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:background="@color/white" />

            <TextView
                android:id="@+id/phonenumber"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="10dp"
                android:background="#FFFFFF"
                android:inputType="phone"
                android:text="@string/phone_num" />

            <TextView
                android:id="@+id/sellerNameProductPage"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="10dp"
                android:background="#FFFFFF"
                android:inputType="phone"
                android:text="@string/seller_name" />


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_anchor="@+id/nestedScrollView"
        app:layout_anchorGravity="center">



        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/addproductbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="6dp"
            android:text="@string/add_card"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:fontFamily="@font/brawler"
            android:background="@drawable/round_gradiant_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>