<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/search_toolbar_adv"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:visibility="visible"
tools:context=".AddProduct">


<androidx.core.widget.NestedScrollView
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/productimage_udp"
            android:layout_width="match_parent"
            android:layout_height="300dp" />

        <EditText
            android:id="@+id/category_udp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:padding="4dp"
            android:background="@drawable/edittext"
            android:hint="@string/category"
            android:textColorHighlight="@color/grayDark"
            android:textColor="@color/grayDark"/>


        <br.com.sapereaude.maskedEditText.MaskedEditText
            android:id="@+id/productname_udp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:maxLines="2"
            android:background="@color/white"
            app:mask="@string/name"
            app:keep_hint="true"/>

        <br.com.sapereaude.maskedEditText.MaskedEditText
            android:id="@+id/price_udp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@color/white"
            app:mask="@string/price"
            app:keep_hint="true"/>


        <View

            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:background="@color/gray" />


        <br.com.sapereaude.maskedEditText.MaskedEditText
            android:id="@+id/description_udp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/white"
            app:mask="@string/description"
            app:keep_hint="true"/>


    </LinearLayout>

</androidx.core.widget.NestedScrollView>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_anchor="@+id/nestedScrollView"
    app:layout_anchorGravity="center">


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/updatepro_udp"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="6dp"
        android:background="@drawable/round_gradiant_button"
        android:text="@string/update_adv"
        android:textSize="18dp"
        android:textStyle="bold"
        android:fontFamily="@font/brawler"
        android:textColor="@color/white"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/deletepro_udp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/deletepro_udp"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="6dp"
        android:background="@drawable/round_gradiant_button"
        android:text="@string/delete_adv"
        android:textSize="18dp"
        android:textStyle="bold"
        android:fontFamily="@font/brawler"
        android:textColor="@color/white"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>

